--- a/package.json
+++ b/package.json
@@ -109,11 +109,13 @@
     }
   },
   "dependencies": {
+    "axios": "^1.2.6",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.0"
   },
   "devDependencies": {
